fix made to ul white space issue

--- a/assets/css/scss/partials/_clients.scss
+++ b/assets/css/scss/partials/_clients.scss
@@ -14,6 +14,7 @@ ul.client-items li {
 .client-item {
   list-style-type: none;
   padding: 0;
+  margin-top: -7px;
 }
 
 .img-client-container {
@@ -33,7 +34,6 @@ ul.client-items li {
   color: #fff;
   opacity: 0.8;
 }
-
 
 .client-info p {
   margin-top: 40%;
@@ -55,7 +55,7 @@ ul.client-items li {
     display: none;
   }
   .client-item {
-    margin: -7px;
+    
   }
   .img-client {
     width: 100%;
