--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,19 +90,20 @@ ul.client-items li {
 .client-item {
   list-style-type: none;
   padding: 0;
+  margin-top: -7px;
 }
 
-/* line 19, scss/partials/_clients.scss */
+/* line 20, scss/partials/_clients.scss */
 .img-client-container {
   position: relative;
 }
 
-/* line 23, scss/partials/_clients.scss */
+/* line 24, scss/partials/_clients.scss */
 .client-info {
   display: none;
 }
 
-/* line 27, scss/partials/_clients.scss */
+/* line 28, scss/partials/_clients.scss */
 .client-item:hover .client-info {
   position: absolute;
   display: block;
@@ -135,11 +136,6 @@ ul.client-items li {
   /* line 54, scss/partials/_clients.scss */
   .img-client-drive {
     display: none;
-  }
-
-  /* line 57, scss/partials/_clients.scss */
-  .client-item {
-    margin: -7px;
   }
 
   /* line 60, scss/partials/_clients.scss */
